--- a/app/src/main/res/layout/row_sport.xml
+++ b/app/src/main/res/layout/row_sport.xml
@@ -19,9 +19,9 @@
 
         <ImageView
             android:id="@+id/icon_stall"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:padding="10dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:padding="15dp"
             android:src="@drawable/icon_stall"
             android:tint="#ffffff" />
     </android.support.v7.widget.CardView>
@@ -42,20 +42,34 @@
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="3dp"
         android:transitionName="@string/simple_fragment_transition">
+        <RelativeLayout
+            android:background="@drawable/bg_gradient2"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+        <ImageView
+            android:layout_marginStart="12dp"
+            android:layout_centerVertical="true"
+            android:id="@+id/icon"
+            android:src="@drawable/football"
+            android:padding="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
 
         <TextView
+            android:layout_marginStart="12dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/icon"
             android:id="@+id/tv_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:text="Football"
-            android:background="@drawable/bg_gradient2"
             android:textColor="@color/background2"
             android:textSize="22sp" />
-
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
