--- a/app/src/main/res/layout/fragment_sponsors.xml
+++ b/app/src/main/res/layout/fragment_sponsors.xml
@@ -63,12 +63,12 @@
         android:dividerHeight="2dp"
         android:divider="@android:color/transparent"
         android:clipToPadding="false"
-        android:paddingTop="125dp"
+        android:paddingTop="60dp"
+        android:paddingLeft="9dp"
+        android:paddingRight="9dp"
         android:overScrollMode="never"
         android:clipChildren="false"
-        android:paddingBottom="3dp"
-        android:paddingStart="3dp"
-        android:paddingEnd="3dp"
+        android:paddingBottom="40dp"
         >
 
     </android.support.v7.widget.RecyclerView>
