--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -26,7 +26,7 @@
             android:layout_below="@+id/iv_bosm"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
-            android:text="BOSM 2K18"
+            android:text="@string/app_name"
             android:textColor="#ffffff"
             android:textSize="27sp" />
 
