--- a/app/src/main/res/layout/layout_hover_notification.xml
+++ b/app/src/main/res/layout/layout_hover_notification.xml
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="You may no notfications or there is a problem with your internet connection."
+            android:text="You may have no notfications or there is a problem with your internet connection."
             android:gravity="center"
             android:textColor="#bdbdbd"
             android:textSize="16sp"
