--- a/app/src/main/res/layout/row_current_sport_athletic2.xml
+++ b/app/src/main/res/layout/row_current_sport_athletic2.xml
@@ -385,7 +385,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:visibility="visible"
+                android:visibility="gone"
                 android:id="@+id/rl_extra"
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="6dp"
